Style checks passing